RESOLVED FIXED265960
[WGSL] Global declarations cannot be stored separately
https://bugs.webkit.org/show_bug.cgi?id=265960
Summary [WGSL] Global declarations cannot be stored separately
Tadeu Zagallo
Reported 2023-12-06 12:48:22 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-06 12:48:32 PST
Tadeu Zagallo
Comment 2 2023-12-06 12:50:40 PST
EWS
Comment 3 2023-12-08 09:17:07 PST
Committed 271738@main (de2c00fe5fb1): <https://commits.webkit.org/271738@main> Reviewed commits have been landed. Closing PR #21409 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.